# test-cargo-patch

child/: Cargo.toml
child/src/: lib.rs
client/: Cargo.toml
parent/: Cargo.toml
parent-x/: Cargo.toml
parent-x/src/: lib.rs
parent/src/: lib.rs
